--- a/beta/index.html
+++ b/beta/index.html
@@ -198,8 +198,12 @@
 
       <div id="settings" style="display: none;">
         <h3>Settings</h3><br>
-        <h4 onclick="sspersonal()"> Personalization <span id="sspersonal-icon" class="glyphicon glyphicon-menu-down"></span></h4>
+        <h4 onclick="sspersonal()"> Personalization And Account <span id="sspersonal-icon" class="glyphicon glyphicon-menu-down"></span></h4>
         <div id="personalizationSettings">
+          Change Password<br>
+          <input class="form-control" type="text" id="passchange1" placeholder='New Password'>
+          <input class="form-control" type="text" id="passchange2" placeholder='Confirm New Password'>
+          <button onclick='changePasswordButton();' class='btn btn-primary'>Change Password</button>
           Background Image<br>
           <input class="form-control" type="text" id="backgroundImg"><br> Bar Color<br>
           <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
