--- a/beta/index.html
+++ b/beta/index.html
@@ -203,7 +203,7 @@
           Change Password<br>
           <input class="form-control" type="text" id="passchange1" placeholder='New Password'>
           <input class="form-control" type="text" id="passchange2" placeholder='Confirm New Password'>
-          <button onclick='changePasswordButton();' class='btn btn-primary'>Change Password</button><br>
+          <button onclick='changePasswordButton();' class='btn btn-primary'>Change Password</button><br><br>
           Background Image<br>
           <input class="form-control" type="text" id="backgroundImg"><br> Bar Color<br>
           <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
