--- a/beta/index.html
+++ b/beta/index.html
@@ -202,7 +202,7 @@
         <div id="personalizationSettings">
           Change Password<br>
           <input class="form-control" type="text" id="passchange1" placeholder='New Password'>
-          <input class="form-control" type="text" id="passchange2" placeholder='Confirm New Password'>
+          <input class="form-control" type="text" id="passchange2" placeholder='Confirm New Password'><br>
           <button onclick='changePasswordButton();' class='btn btn-primary'>Change Password</button><br><br>
           Background Image<br>
           <input class="form-control" type="text" id="backgroundImg"><br> Bar Color<br>
