--- a/beta/index.html
+++ b/beta/index.html
@@ -200,10 +200,11 @@
         <h3>Settings</h3><br>
         <h4 onclick="sspersonal()"> Personalization And Account <span id="sspersonal-icon" class="glyphicon glyphicon-menu-down"></span></h4>
         <div id="personalizationSettings">
-          Change Password<br>
+          <h6 style="font-size: 150%"> Change Password </h6>
           <input class="form-control" type="text" id="passchange1" placeholder='New Password'>
           <input class="form-control" type="text" id="passchange2" placeholder='Confirm New Password'><br>
           <button onclick='changePasswordButton();' class='btn btn-primary'>Change Password</button><br><br>
+          <h6 style="font-size: 150%"> Theming Options </h6>
           Background Image<br>
           <input class="form-control" type="text" id="backgroundImg"><br> Bar Color<br>
           <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
