--- a/beta/index.html
+++ b/beta/index.html
@@ -372,7 +372,7 @@
         </ul>
       </nav>
       <!--end of context menu -->
-      <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
+      <script src="js/aes.js"></script>
       <script src="js/alertify.js"></script>
       <script src="js/home.js"></script>
       <script src="js/cmenu.js"></script>
