--- a/beta/index.html
+++ b/beta/index.html
@@ -41,13 +41,13 @@
       <nav class="navbar navbar-inverse" id="navbar">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#tiBar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
           </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
+          <div class="collapse navbar-collapse" id="tiBar">
             <ul class="nav navbar-nav">
 
               <li class="dropdown">
