--- a/beta/index.html
+++ b/beta/index.html
@@ -38,7 +38,7 @@
 
   <body id="body" class="task" onload="hideTimer()">
     <div id="timedia-nav-bar">
-      <nav class="navbar navbar-inverse" id="navbar">
+      <nav class="navbar navbar-inverse sticky-top" id="navbar">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#tiBar">
