--- a/beta/index.html
+++ b/beta/index.html
@@ -276,7 +276,7 @@
           </div>
           <br><br>
         </div>
-        <table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table" class='tisheetsContentClass'>
+        <table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table" class='tisheetsContent'>
           <tr>
             <th>Value</th>
             <th>Value</th>
