--- a/beta/index.html
+++ b/beta/index.html
@@ -272,7 +272,7 @@
               Change Text Color
             </p>
             <input style="width: 5%;" id="fontColorSheets" class="jscolor form-control" value="000000"><br>
-            <button onclick='setColorSheets();' class='btn btn-success'>Set Color</button>
+            <button onclick='setColorSheets();' class='btn btn-success'>Set Color</button><br>
           </div>
           <br><br>
         </div>
