--- a/beta/index.html
+++ b/beta/index.html
@@ -175,9 +175,7 @@
                 Change Text Color
               </p>
               <input style="width: 5%;" id="fontColor" class="jscolor form-control" value="000000"><br>
-              <button onclick='setColor();' class='btn btn-primary'>
-      Set Color
-      </button>
+              <button onclick='setColor();' class='btn btn-primary'>Set Color</button><br>
             </div>
             <br><br>
           </div>
