--- a/beta/index.html
+++ b/beta/index.html
@@ -152,16 +152,16 @@
         <h3 id="tidocs-header">TiDocs</h3><br>
         <div id="create">
           <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
-          <div class='formatting-bar' style='outline: 0;'>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('bold'); saveDoc();"><b>B</b></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('italic'); saveDoc();"><i>I</i></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('underline'); saveDoc();"><u>U</u></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('superscript'); saveDoc();">xⁱ</button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('subscript'); saveDoc();">xₐ</button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyLeft'); saveDoc();"><span class="glyphicon glyphicon-align-left"></span></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
-            <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
+          <div class='formatting-bar'>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('bold'); saveDoc();"><b>B</b></button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('italic'); saveDoc();"><i>I</i></button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('underline'); saveDoc();"><u>U</u></button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('superscript'); saveDoc();">xⁱ</button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('subscript'); saveDoc();">xₐ</button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyLeft'); saveDoc();"><span class="glyphicon glyphicon-align-left"></span></button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
+            <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
+            <button class="btn btn-primary formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
             <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
             <button id='fontSelect' class="btn btn-primary" style='float: left; border-radius: 0px; box-shadow: none;'>
       <div class="arrow-down"></div>
