--- a/beta/index.html
+++ b/beta/index.html
@@ -162,8 +162,8 @@
             <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
             <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
             <button class="btn btn-primary formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
-            <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
-            <button id='fontSelect' class="btn btn-primary" style='float: left; border-radius: 0px; box-shadow: none;'>
+            <!--<button class="btn btn-primary" onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
+            <button id="fontSelect" class="btn btn-primary formatting-button">
       <div class="arrow-down"></div>
       </button>
             <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('undo'); saveDoc();">↰</button>
@@ -248,17 +248,17 @@
         <h3 id="tisheets-header">TiSheets</h3>
         <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
         <div class='formatting-bar' id="sheets-formatting-bar" style='outline: 0;'>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('bold'); saveSheet();"><b>B</b></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('italic'); saveSheet();"><i>I</i></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('underline'); saveSheet();"><u>U</u></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('superscript'); saveSheet();">xⁱ</button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('subscript'); saveSheet();">xₐ</button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyLeft'); saveSheet();"><span class="glyphicon glyphicon-align-left"></span></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyCenter'); saveSheet();"><span class="glyphicon glyphicon-align-center"></span></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('justifyRight'); saveSheet();"><span class="glyphicon glyphicon-align-right"></span></button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="showTiWorkColorSheets()"><span class='glyphicon glyphicon-tint'></span></button>
-          <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
-          <button id='fontSelectSheets' class="btn btn-success" style='float: left; border-radius: 0px; box-shadow: none;'>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('bold'); saveDoc();"><b>B</b></button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('italic'); saveDoc();"><i>I</i></button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('underline'); saveDoc();"><u>U</u></button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('superscript'); saveDoc();">xⁱ</button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('subscript'); saveDoc();">xₐ</button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyLeft'); saveDoc();"><span class="glyphicon glyphicon-align-left"></span></button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
+            <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
+            <button class="btn btn-success formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
+            <!--<button class="btn btn-success formatting-button" onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
+            <button id="fontSelect" class="btn btn-success formatting-button">
       <div class="arrow-down"></div>
       </button>
           <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('undo'); saveSheet();">↰</button>
