--- a/beta/index.html
+++ b/beta/index.html
@@ -222,10 +222,10 @@
       <div id="tiles" style="display: none;">
         <h3>Tiles</h3><br>
         <input placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><br>
-        <div id="tiles-tiles" class="nobullet">
+        <div id="tiles-tiles" class="nobullet" style="padding: 20px;">
           You have no Tiles.
         </div>
-        <div id="tiles-searchbox" class="nobullet" style="display: none;">
+        <div id="tiles-searchbox" class="nobullet" style="display: none; padding: 20px;">
         </div>
         <nav id="tiles-add-button" class="fab-container">
           <a href="?app=10" class="buttons">
