--- a/beta/index.html
+++ b/beta/index.html
@@ -259,9 +259,9 @@
             <button id="fontSelect" class="btn btn-success formatting-button">
       <div class="arrow-down"></div>
       </button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('undo'); saveSheet();">↰</button>
-          <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('redo'); saveSheet();">↱</button>
-          <!--<button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
+          <button class="btn btn-success formatting-button" onclick="document.execCommand('undo'); saveSheet();">↰</button>
+          <button class="btn btn-success formatting-button" onclick="document.execCommand('redo'); saveSheet();">↱</button>
+          <!--<button class="btn btn-success formatting-button" onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
           <br><br>
           <div style="display: none;" class='jumbotron container' style="padding: 10px;" id='fontColorDivSheets'>
             <p style='font-size: 30px;'>Change Text Color</p>
