--- a/beta/index.html
+++ b/beta/index.html
@@ -254,7 +254,7 @@
             <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyLeft'); saveDoc();"><span class="glyphicon glyphicon-align-left"></span></button>
             <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
             <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
-            <button class="btn btn-success formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
+            <button class="btn btn-success formatting-button" onclick="showTiWorkColorSheets()"><span class='glyphicon glyphicon-tint'></span</button>
             <!--<button class="btn btn-success formatting-button" onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
             <button id="fontSelect" class="btn btn-success formatting-button">
       <div class="arrow-down"></div>
