--- a/beta/index.html
+++ b/beta/index.html
@@ -256,9 +256,9 @@
             <button class="btn btn-success formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
             <button class="btn btn-success formatting-button" onclick="showTiWorkColorSheets()"><span class='glyphicon glyphicon-tint'></span</button>
             <!--<button class="btn btn-success formatting-button" onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
-            <button id="fontSelect" class="btn btn-success formatting-button">
-      <div class="arrow-down"></div>
-      </button>
+            <button id="fontSelectSheets" class="btn btn-success formatting-button">
+            <div class="arrow-down"></div>
+            </button>
           <button class="btn btn-success formatting-button" onclick="document.execCommand('undo'); saveSheet();">↰</button>
           <button class="btn btn-success formatting-button" onclick="document.execCommand('redo'); saveSheet();">↱</button>
           <!--<button class="btn btn-success formatting-button" onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>-->
