--- a/beta/index.html
+++ b/beta/index.html
@@ -350,6 +350,7 @@
       </nav>
       <!--end of context menu -->
       <script src="js/aes.js"></script>
+      <script src="js/pbkdf2.js"></script>
       <script src="js/alertify.js"></script>
       <script src="js/home.js"></script>
       <script src="js/cmenu.js"></script>
