--- a/beta/index.html
+++ b/beta/index.html
@@ -34,8 +34,6 @@
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Home - TiMedia</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/pbkdf2.js"></script>
   </head>
 
   <body id="body" class="task" onload="hideTimer()">
@@ -351,6 +349,7 @@
         </ul>
       </nav>
       <!--end of context menu -->
+      <script src="js/aes.js"></script>
       <script src="js/alertify.js"></script>
       <script src="js/home.js"></script>
       <script src="js/cmenu.js"></script>
