--- a/beta/index.html
+++ b/beta/index.html
@@ -36,7 +36,7 @@
     <title>Home - TiMedia</title>
   </head>
 
-  <body id="body" class="task" onload="hideTimer()">
+  <body id="body" class="task" onload="onloadIndex()">
       <nav class="navbar navbar-inverse" id="timedia-nav-bar">
         <div class="container-fluid">
           <div class="navbar-header">
