--- a/beta/logout.html
+++ b/beta/logout.html
@@ -1,6 +1,11 @@
 <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
 <script src="js/db.js"></script>
 <script>
+  windows.onerror = function (message, error, lineno, colno) {
+    alert(message + ' ' + error + ' ' + lineno + ' ' + colno)
+  }
+  
+  
   if (localStorage.faces !== undefined) {
     var localFaces = localStorage.faces;
     var localTiSmileAccount = localStorage.tismileaccount;
