--- a/beta/index.html
+++ b/beta/index.html
@@ -242,6 +242,33 @@
           </a>
         </nav>
       </div>
+      <div id="tislides" style="display: none;">
+      <h3>TiSlides <b>Beta</b></h3>
+      <div id="controls">
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('bold'); saveSlide();"><b>B</b></button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('italic'); saveSlide();"><i>I</i></button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('underline'); saveSlide();"><u>U</u></button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('superscript'); saveSlide();">xⁱ</button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('subscript'); saveSlide();">xₐ</button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyLeft'); saveSlide();"><span class="glyphicon glyphicon-align-left"></span></button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyCenter'); saveSlide();"><span class="glyphicon glyphicon-align-center"></span></button>
+      <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyRight'); saveSlide();"><span class="glyphicon glyphicon-align-right"></span></button>
+      <button class="btn btn-slides formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span></button>
+      <button class="btn btn-slides formatting-button" onclick="addImage(prompt('Image URL'))"><span class="glyphicon glyphicon-picture"></span></button>
+      <button class="btn btn-slides formatting-button" onclick="addSlide()">+</button>
+      <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button><br><br>
+      <button class="btn btn-slides formatting-button" onclick="addText()">Add Text</button>
+      <button class="btn btn-slides formatting-button" onclick="addHeader()">Add Header</button><br><br>
+      </div>
+      <div id="slide" onkeyup="saveSlide()">
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </div><br>
+      <h5 id="currentSlide">1</h5>
+      <button onclick="previousSlide()" class="btn btn-slides formatting-button"><</button>
+      <button onclick="nextSlide()" class="btn btn-slides formatting-button">></button>
+      <button id="stopPresentation" onclick="stopPresentation()" class="btn btn-slides" style="display: none;">Stop Presentation</button>
+      </div> 
+      </div>
       <div id="tisheets" style="display: none;">
         <h3 id="tisheets-header">TiSheets</h3>
         <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
