--- a/beta/index.html
+++ b/beta/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="other resources/style2.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/style.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="other resources/slides.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiles.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
@@ -259,6 +260,7 @@
       <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button><br><br>
       <button class="btn btn-slides formatting-button" onclick="addText()">Add Text</button>
       <button class="btn btn-slides formatting-button" onclick="addHeader()">Add Header</button><br><br>
+      <button class="btn btn-slides formatting-button" onclick="addSubtitle()">Subtitle</button><br><br>
       </div>
       <div id="slide" onkeyup="saveSlide()">
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -397,6 +399,7 @@
       <script src="js/db.js"></script>
       <script src="js/docs.js"></script>
       <script src="js/sheets.js"></script>
+      <script src="js/slides.js"></script>
       <script src="js/tiles.js"></script>
       <script src="js/settings.js"></script>
       <script src="js/messages.js"></script>
