--- a/beta/index.html
+++ b/beta/index.html
@@ -259,7 +259,7 @@
       <button class="btn btn-slides formatting-button" onclick="addSlide()">+</button>
       <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button><br><br>
       <button class="btn btn-slides formatting-button" onclick="addText()">Add Text</button>
-      <button class="btn btn-slides formatting-button" onclick="addHeader()">Add Header</button><br><br>
+      <button class="btn btn-slides formatting-button" onclick="addHeader()">Add Header</button>
       <button class="btn btn-slides formatting-button" onclick="addSubtitle()">Subtitle</button><br><br>
       </div>
       <div id="slide" onkeyup="saveSlide()">
@@ -270,7 +270,6 @@
       <button onclick="nextSlide()" class="btn btn-slides formatting-button">></button>
       <button id="stopPresentation" onclick="stopPresentation()" class="btn btn-slides" style="display: none;">Stop Presentation</button>
       </div> 
-      </div>
       <div id="tisheets" style="display: none;">
         <h3 id="tisheets-header">TiSheets</h3>
         <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
