--- a/beta/index.html
+++ b/beta/index.html
@@ -88,7 +88,7 @@
           <h3>Tiri</h3>
           <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
           <h5 id="mutemessage"></h5>
-          <input id="iChat-input" class="iChat iChat-input"><div id="iChat-messages" class="iChat-messages iChat"></div><script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
+          <input id="iChat-input" class="form-control"><div id="iChat-messages" class="iChat-messages iChat"></div><script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
       </div>
       </center>
       <div style="display: none;" id="messages">
