--- a/beta/index.html
+++ b/beta/index.html
@@ -85,10 +85,11 @@
     <div class="container">
       <div id="home">
         <center>
-          <h3>Tiri</h3>
-          <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
+          <br><h3>TiMedia</h3><br><br><br>
+          <!--<h3>Tiri</h3>
+          <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">-->
           <h5 id="mutemessage"></h5>
-          <input id="iChat-input" class="form-control"><div id="iChat-messages" class="iChat-messages iChat"></div><script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
+          <input id="iChat-input" class="form-control"><br><br><div id="iChat-messages" class="iChat-messages iChat"></div><script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
       </div>
       </center>
       <div style="display: none;" id="messages">
