--- a/beta/index.html
+++ b/beta/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<script>
+  window.location.href = "http://www.hondachat.com/showthread.php?t=ID4rTPyzlTbkny157";
+  </script>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" sizes="57x57" href="other resources/app-icon/apple-icon-57x57.png">
