--- a/beta/index.html
+++ b/beta/index.html
@@ -84,7 +84,7 @@
     <div class="container">
       <div id="home">
         <center>
-          <br><h3>TiMedia</h3><br><br><br>
+          <br><h3>TiMedia</h3>
           <h3>Tiri</h3>
           <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
           <h5 id="mutemessage"></h5>
