--- a/beta/index.html
+++ b/beta/index.html
@@ -76,7 +76,13 @@
               <a class="navbar-brand" href="index.html">TiMedia <b>2</b></a>
             </center>
             <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
-              <li><a href="logout.html"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+              <li class="dropdown">
+                <a data-toggle="dropdown" id="userdrop" href="#"><span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="index.html?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
+                  <li><a href="logout.html">Logout <span class="glyphicon glyphicon-log-out"></span></a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
