--- a/beta/index.html
+++ b/beta/index.html
@@ -225,6 +225,9 @@
           <a href="?app=10" class="buttons">
             <center><span style="font-size:30px;" class="glyphicon glyphicon-bookmark"></center></span></a>
 
+          <a href="?app=9" class="buttons">
+            <center><span style="font-size:30px;" class="glyphicon glyphicon-blackboard"></center></span></a>
+
           <a href="?app=4" class="buttons">
             <center><span style="font-size:30px;" class="glyphicon glyphicon-th-list"></center></span></a>
 
