--- a/beta/index.html
+++ b/beta/index.html
@@ -261,7 +261,7 @@
       <div id="slide" onkeyup="saveSlide()">
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div><br>
-      <h5 id="currentSlide">1</h5>
+      <h5 id="currentSlide">1/1</h5>
       <button onclick="previousSlide()" class="btn btn-slides formatting-button"><</button>
       <button onclick="nextSlide()" class="btn btn-slides formatting-button">></button>
       <button id="stopPresentation" onclick="stopPresentation()" class="btn btn-slides" style="display: none;">Stop Presentation</button>
