--- a/beta/index.html
+++ b/beta/index.html
@@ -256,7 +256,7 @@
       <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button><br><br>
       <button class="btn btn-slides formatting-button" onclick="addText()">Add Text</button>
       <button class="btn btn-slides formatting-button" onclick="addHeader()">Add Header</button>
-      <button class="btn btn-slides formatting-button" onclick="addSubtitle()">Subtitle</button><br><br>
+      <button class="btn btn-slides formatting-button" onclick="addSubtitle()">Add Subtitle</button><br><br>
       </div>
       <div id="slide" onkeyup="saveSlide()">
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
