--- a/beta/login.html
+++ b/beta/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <link rel="apple-touch-icon" sizes="57x57" href="other resources/app-icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="other resources/app-icon/apple-icon-60x60.png">
@@ -11,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="other resources/app-icon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="other resources/app-iconapp-icon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="other resources/app-icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="other resources/app-icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="other resources/app-icon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="other resources/app-icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="other resources/app-icon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="other resources/app-icon/favicon-16x16.png">
@@ -19,82 +20,94 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579764-3"></script>
+    <script>
+        function gtag() {
+            dataLayer.push(arguments)
+        }
+        window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-109579764-3")
+    </script>
     <!-- Bootstrap CSS -->
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/style2.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/style.css" crossorigin="anonymous">
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Login - TiMedia</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <a class="navbar-brand" href="#">TiMedia <b>2</b></a>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a onclick="signupShow()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+</head>
 
-<div class="container">
-    <div id="login-user">
-    <h3>Login</h3><br>
-  
-      Username<br>
-      <input type="text" id="login-username" class="form-control" onchange="document.getElementById('login-password').focus();" autofocus><br>
-  
-      Password<br>
-      <input type="password" id="login-password" class="form-control" onchange="login()"><br>
-      <p id="error" style="color: red;"></p>
-      <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button><br><br>
+<body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <a class="navbar-brand" href="#">TiMedia <b>2</b></a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a onclick="signupShow()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div id="login-user">
+            <h3>Login</h3>
+            <br> Username
+            <br>
+            <input type="text" id="login-username" class="form-control" onchange="document.getElementById('login-password').focus();" autofocus>
+            <br> Password
+            <br>
+            <input type="password" id="login-password" class="form-control" onchange="login()">
+            <br>
+            <p id="error" style="color: red;"></p>
+            <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button>
+            <br>
+            <br>
+        </div>
+        <div id="login-tismile" style="display: none;">
+            <h3>Login with TiSmile</h3>
+            <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video>
+            <br>
+            <h5 id="status">Looking for face...</h5>
+            <a href="#" onclick="loginPassword()">Login with password instead.</a>
+            <canvas id="tismile-canvas" style="display: none;"></canvas>
+        </div>
     </div>
-    <div id="login-tismile" style="display: none;">
-      <h3>Login with TiSmile</h3>
-      <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
-      <h5 id="status">Looking for face...</h5>
-      <a href="#" onclick="loginPassword()">Login with password instead.</a>
-      <canvas id="tismile-canvas" style="display: none;"></canvas>
-    </div>
-</div>
     <script>
-      function signupShow(){
-       document.getElementById('signup').style.display = 'block'; document.getElementById('login-user').remove();
-      }
-  function signup() {
- if (document.getElementById('username') !== "" && document.getElementById('password').value) {
-  firebase.auth().createUserWithEmailAndPassword(document.getElementById('username').value + "@timediatied.com", document.getElementById('password').value).catch(function(error) {
-  var errorCode = error.code;
-  var errorMessage = error.message;
-  console.log(errorCode + " " + errorMessage);
-  alert("There has been an error! " + errorMessage)
-   });
-  } else {
-    alert('Please enter a username and password!')
-  }
-}
-</script>
-<div id='signup' style='display: none;' class='container'>
-<center>
-<h3> Sign Up For TiMedia </h3>
-<input class='form-control' id='username' placeholder='Username'>
-<input class='form-control' id='password' placeholder='Password'><br>
-<button class='btn btn-primary' onclick='signup()'>Sign Up</button>
-</center>
-</div>
+        function signupShow() {
+            document.getElementById('signup').style.display = 'block';
+            document.getElementById('login-user').remove();
+        }
+
+        function signup() {
+            if (document.getElementById('username') !== "" && document.getElementById('password').value) {
+                firebase.auth().createUserWithEmailAndPassword(document.getElementById('username').value + "@timediatied.com", document.getElementById('password').value).catch(function(error) {
+                    var errorCode = error.code;
+                    var errorMessage = error.message;
+                    console.log(errorCode + " " + errorMessage);
+                    alert("There has been an error! " + errorMessage)
+                });
+            } else {
+                alert('Please enter a username and password!')
+            }
+        }
+    </script>
+    <div id='signup' style='display: none;' class='container'>
+        <center>
+            <h3> Sign Up For TiMedia </h3>
+            <input class='form-control' id='username' placeholder='Username'>
+            <input class='form-control' id='password' placeholder='Password'>
+            <br>
+            <button class='btn btn-primary' onclick='signup()'>Sign Up</button>
+        </center>
+    </div>
     <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -102,5 +115,6 @@
     <script src="js/db.js"></script>
     <script src="js/main.js"></script>
     <script src="js/login-tismile.js"></script>
-  </body>
+</body>
+
 </html>
