--- a/beta/login.html
+++ b/beta/login.html
@@ -102,8 +102,8 @@
     <div id='signup' style='display: none;' class='container'>
         <center>
             <h3> Sign Up For TiMedia </h3>
-            <input class='form-control' id='username' placeholder='Username'>
-            <input class='form-control' id='password' placeholder='Password'>
+            <input type="text" class='form-control' id='username' placeholder='Username'>
+            <input type="password" class='form-control' id='password' placeholder='Password'>
             <br>
             <button class='btn btn-primary' onclick='signup()'>Sign Up</button>
         </center>
