--- a/beta/index.html
+++ b/beta/index.html
@@ -93,7 +93,7 @@
                 <br>
                 <h3>TiMedia</h3>
                 <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
-                <h5 id="mutemessage"></h5>
+                <div id='private-messages'></div>
                 <input id="iChat-input" class="form-control">
                 <br>
                 <br>
