--- a/beta/index.html
+++ b/beta/index.html
@@ -93,12 +93,14 @@
                 <br>
                 <h3>TiMedia</h3>
                 <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
-                <div id='private-messages'></div>
                 <input id="iChat-input" class="form-control">
                 <br>
                 <br>
                 <div id="iChat-messages" class="iChat-messages iChat"></div>
                 <script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
+                <div id='pming-home'>
+                <input id='message-input' class='form-control'><span style='background-color: #2296f3; width: 50px;' height: 50px;'><span class='glyphicon glyphicon-arrow-right' style='background-color: #ffffff;'></span></span>
+                <div id='private-messages'></div>
         </div>
         </center>
         <div style="display: none;" id="messages">
