--- a/beta/index.html
+++ b/beta/index.html
@@ -99,7 +99,7 @@
                 <div id="iChat-messages" class="iChat-messages iChat"></div>
                 <script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
                 <div id='pming-home'>
-                <input id='message-input' class='form-control'><span style='background-color: #2296f3; width: 50px;' height: 50px;'><span class='glyphicon glyphicon-arrow-right' style='background-color: #ffffff;'></span></span>
+                <input id='message-input' class='form-control'><span onclick='sendMessage(document.getElementById("message-input").value)' style='background-color: #2296f3; width: 50px;' height: 50px;'><span class='glyphicon glyphicon-arrow-right' style='background-color: #ffffff;'></span></span>
                 <div id='private-messages'></div>
         </div>
         </center>
