--- a/beta/index.html
+++ b/beta/index.html
@@ -101,6 +101,7 @@
                 <div id='pming-home'>
                 <input id='message-input' class='form-control'><button onclick='sendMessage(document.getElementById("message-input"))' class='btn btn-primary'>Send Message</button>
                 <div id='private-messages'></div>
+                </div>
         </div>
         </center>
         <div style="display: none;" id="messages">
