--- a/beta/index.html
+++ b/beta/index.html
@@ -98,15 +98,18 @@
                 <br>
                 <div id="iChat-messages" class="iChat-messages iChat"></div>
                 <script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
+                <!-- iChat plugins -->
+                <script src="js/iChat.js"></script>
                 <div id='pming-home' style='display: none;'>
-                <input id='message-input' class='form-control'><button onclick='sendMessage(document.getElementById("message-input").value)' class='btn btn-primary'>Send Message</button>
+                <input id='message-input' class='form-control'>
+                <button onclick='sendMessage(document.getElementById("message-input").value)' class='btn btn-primary'>Send Message</button>
                 <div id='private-messages'></div>
                 </div>
         </div>
         </center>
         <div style="display: none;" id="messages">
             <h3>TiChat</h3>
-            <br> Username
+            <p> Username</p>
             <br>
             <input id="chat" class="form-control" autofocus>
             <br>
