--- a/beta/index.html
+++ b/beta/index.html
@@ -333,6 +333,7 @@
             <button onclick="previousSlide()" class="btn btn-slides formatting-button">
                 <</button>
                     <button onclick="nextSlide()" class="btn btn-slides formatting-button">></button>
+                    <button id="presentSlide" onclick="presentSlide()" class="btn btn-slides">Present</button>
                     <button id="stopPresentation" onclick="stopPresentation()" class="btn btn-slides" style="display: none;">Stop Presentation</button>
         </div>
         <div id="tisheets" style="display: none;">
