--- a/beta/index.html
+++ b/beta/index.html
@@ -206,6 +206,9 @@
             </div>
             <h5 style="display: none;" id="view"></h5>
             <br>
+            <button onclick="window.print()" id="legacyPrintButton" class="btn btn-primary no-print">Print Page</button>
+            <button onclick="tiPrint()" id="printButton" class="btn btn-primary no-print" style="display: none"><i class="fa fa-mouse-pointer"></i> <span class="badge badge-pill">NEW</span> Print Now with TiPrint</button>
+            <br>
             <button id="tidocs-edit" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
             <button id="tidocs-reader" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="docReader()" class="btn btn-primary"><span class="glyphicon glyphicon-align-justify"></span></button>
         </div>
@@ -395,6 +398,11 @@
             <br>
             <button class="btn btn-success" id="tisheets-add-row" onclick="newRow()">Add Row</button>
             <!--<button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>-->
+          <h5 style="display: none;" id="view"></h5>
+            <br>
+            <button onclick="window.print()" id="legacyPrintButton" class="btn btn-success no-print">Print Page</button>
+            <button onclick="tiPrint()" id="printButton" class="btn btn-success no-print" style="display: none"><i class="fa fa-mouse-pointer"></i> <span class="badge badge-pill">NEW</span> Print Now with TiPrint</button>
+            <br>
             <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
             <button class="btn btn-success" id="tisheets-reader" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="sheetReader()"><span class="glyphicon glyphicon-align-justify"></span></button>
             <button class="btn btn-success" id='tisheets-add-column' onclick="newColumn()">Add Column</button>
