--- a/beta/index.html
+++ b/beta/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body id="body" class="task" onload="hideTimer();">
-    <nav class="navbar navbar-inverse" id="timedia-nav-bar">
+    <nav class="navbar navbar-inverse no-print" id="timedia-nav-bar">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#tiBar">
