--- a/beta/index.html
+++ b/beta/index.html
@@ -448,7 +448,7 @@
             </div>
         </div>
         <!--context menu-->
-        <nav id="context-menu" class="context-menu">
+        <nav id="context-menu" class="context-menu no-print">
             <ul class="context-menu__items">
                 <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a>
                 </li>
