--- a/beta/index.html
+++ b/beta/index.html
@@ -164,7 +164,7 @@
             <button class="btn btn-primary" onclick="submitApp()">Create App</button>
         </div>
         <div style="display: none;" id="tidocs">
-            <h3 id="tidocs-header">TiDocs</h3>
+            <h3 id="tidocs-header no-print">TiDocs</h3>
             <br>
             <div id="create">
                 <input id="docsTitle" class="form-control lg" value="Untitled Document">
@@ -340,7 +340,7 @@
                     <button id="stopPresentation" onclick="stopPresentation()" class="btn btn-slides" style="display: none;">Stop Presentation</button>
         </div>
         <div id="tisheets" style="display: none;">
-            <h3 id="tisheets-header">TiSheets</h3>
+            <h3 id="tisheets-header no-print">TiSheets</h3>
             <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet">
             <br>
             <div class="formatting-bar no-print" id="sheets-formatting-bar" style='outline: 0;'>
